log
Fri 21 Apr 2023 06:28:15 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: unused variable ‘root’ [-Werror=unused-variable]
   43 |         TreeNode * root = createTreeNode(key1, value);
      |                    ^~~~
treemap.c:43:27: error: ‘key1’ may be used uninitialized [-Werror=maybe-uninitialized]
   43 |         TreeNode * root = createTreeNode(key1, value);
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:27: error: ‘value’ may be used uninitialized [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
450df47
Fri 21 Apr 2023 06:38:04 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|8
total_score: 0/70
0e372bd
Fri 21 Apr 2023 06:38:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
29d515d
